modified:   dashboard/templates/restore_templates/98-restore-job.yaml

--- a/dashboard/templates/restore_templates/98-restore-job.yaml
+++ b/dashboard/templates/restore_templates/98-restore-job.yaml
@@ -7,7 +7,17 @@ spec:
   template:
     spec:
       restartPolicy: Never
+      affinity:
+        podAffinity:
+          requiredDuringSchedulingIgnoredDuringExecution:
+          - labelSelector:
+              matchLabels:
+                app: opendkim # because opendkim is running on the same node as kubepanel. Fix this later
+            topologyKey: "kubernetes.io/hostname"
       volumes:
+      - name: kubepanel
+        persistentVolumeClaim:
+          claimName: kubepanel
       - name: backup
         persistentVolumeClaim:
           claimName: {{ domain_name_dash }}-backup-pvc
@@ -26,6 +36,8 @@ spec:
         image: laszlokulcsar/db-client:v0.1
         imagePullPolicy: Always
         volumeMounts:
+        - name: kubepanel
+          mountPath: /kubepanel
         - name: backup
           mountPath: /backup
         command: 
