modified:   dashboard/templates/backup_templates/backup-job-manual.yaml 	modified:   dashboard/templates/delete_templates/99-domain-delete-job.yaml 	modified:   dashboard/templates/yaml_templates/backup-job.yaml

--- a/dashboard/templates/backup_templates/backup-job-manual.yaml
+++ b/dashboard/templates/backup_templates/backup-job-manual.yaml
@@ -4,6 +4,7 @@ metadata:
   name: backup-{{ domain_name_dash }}-{{ jobid }} 
   namespace: kubepanel
 spec:
+  ttlSecondsAfterFinished: 3600
   template:
     spec:
       restartPolicy: Never
