new file:   dashboard/management/commands/del_snapshot.py 	modified:   dashboard/templates/yaml_templates/backup-job.yaml

--- a/dashboard/templates/yaml_templates/backup-job.yaml
+++ b/dashboard/templates/yaml_templates/backup-job.yaml
@@ -30,18 +30,27 @@ spec:
               value: "{{ domain_name_underscore }}"
             - name: DBNAME
               value: "{{ domain_name_underscore }}"
+            - name: NAMESPACE
+              value: "{{ domain_name_dash }}"
+            - name: DOMAIN
+              value: "{{ domain_name }}"
             image: laszlokulcsar/db-client:v0.1
             imagePullPolicy: Always
             command:
               - /bin/bash
               - -c
               - |
+                set -euo pipefail
+                DATE=$(date +'%Y%m%d%H%M%S')
                 # Random sleep between 0 and 3600 seconds (1 hour)
                 SLEEP_TIME=$(( $RANDOM % 3600 ))
+                SNAP_NAME="${NAMESPACE}-snapshot-${DATE}"
+                LOGFILE=/backup/${NAMESPACE}-snapshot-${DATE}.log
+                exec > >(tee -a "$LOGFILE") 2>&1
                 echo "Sleeping for ${SLEEP_TIME}s before snapshot..."
                 sleep $SLEEP_TIME
+                echo ">>> Starting backup job at $(date)"
                 python3 /kubepanel/manage.py add_log --model dashboard.domain --lookup domain_name="{{ domain_name }}" --actor system --message "Backup process started for {{ domain_name }}" --level INFO
-                DATE=$(date +'%Y%m%d%H%M%S')
                 echo $DATE
                 # Now create the snapshot
                 kubectl apply -f - <<EOF
@@ -57,6 +66,7 @@ spec:
                 EOF
                 python3 /kubepanel/manage.py add_snapshot -sn {{ domain_name_dash }}-snapshot-$DATE -d {{ domain_name }}
                 mysqldump -h mariadb.kubepanel.svc.cluster.local -uroot -p$MARIADB_ROOT_PASSWORD $DBNAME > /backup/{{ domain_name_dash }}-snapshot-$DATE.sql
+                echo ">>> Backup finished at $(date)"
                 ls -alh /backup/
                 set -euo pipefail
                 echo "Cleaning VolumeSnapshots older than 6 days..."
@@ -73,6 +83,7 @@ spec:
                 echo "Removing SQL dumps older than 6 days..."
                 find /backup -maxdepth 1 -name '{{ domain_name_dash }}-snapshot-*.sql' -mtime +6 -print -delete
                 ls -alh /backup/
+                python3 /kubepanel/manage.py add_snapshot --snapshotname "${SNAP_NAME}" --domain       "${DOMAIN}" --logfile      "$LOGFILE"
                 python3 /kubepanel/manage.py add_log --model dashboard.domain --lookup domain_name="{{ domain_name }}" --actor system --message "Backup process finished for {{ domain_name }}" --level INFO
             volumeMounts:
             - name: kubepanel
