modified:   templates/yaml_templates/backup-job.yaml 	modified:   templates/yaml_templates/sftp-configmap_base.yaml 	modified:   views.py

--- a/dashboard/templates/yaml_templates/backup-job.yaml
+++ b/dashboard/templates/yaml_templates/backup-job.yaml
@@ -27,9 +27,9 @@ spec:
                   name: mariadb-auth
                   key: password
             - name: DBUSER
-              value: "{{ domain_name_underscore }}"
+              value: "{{ domain_instance.mariadb_user }}"
             - name: DBNAME
-              value: "{{ domain_name_underscore }}"
+              value: "{{ domain_instance.mariadb_user }}"
             - name: NAMESPACE
               value: "{{ domain_name_dash }}"
             - name: DOMAIN
