--- a/dashboard/templates/yaml_templates/sftp-configmap_base.yaml
+++ b/dashboard/templates/yaml_templates/sftp-configmap_base.yaml
@@ -5,4 +5,4 @@ metadata:
   namespace: {{ domain_name_dash }}
 data:
   authorized_keys: |
-    {{ public_key }}
+    {{ domain_instance.scp_pubkey }}
